--- a/src/EHost.TcpServer/EHost.TcpServer.csproj
+++ b/src/EHost.TcpServer/EHost.TcpServer.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EHost.Model\EHost.Contract.csproj" />
+    <ProjectReference Include="..\EHost.Contract\EHost.Contract.csproj" />
   </ItemGroup>
 
 </Project>
