--- a/src/EMqttRelay/EMqttRelay.csproj
+++ b/src/EMqttRelay/EMqttRelay.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EHost.Model\EHost.Contract.csproj" />
+    <ProjectReference Include="..\EHost.Contract\EHost.Contract.csproj" />
     <ProjectReference Include="..\EHost.TcpServer\EHost.TcpServer.csproj" />
   </ItemGroup>
 
