mqtt 最终服务提交

--- a/src/EMqttRelay/EMqttRelay.csproj
+++ b/src/EMqttRelay/EMqttRelay.csproj
@@ -45,6 +45,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EHost.Contract\EHost.Contract.csproj" />
+    <ProjectReference Include="..\EHost.Mqtt\EHost.Mqtt.csproj" />
     <ProjectReference Include="..\EHost.TcpServer\EHost.TcpServer.csproj" />
   </ItemGroup>
 
