--- a/src/EMqttRelay/appsettings.json
+++ b/src/EMqttRelay/appsettings.json
@@ -1,10 +1,6 @@
 {
   "TcpServer": {
-    "Port": 12345
-  },
-  "ConnectionStrings": {
-    //"DefaultConnection": "Host=118.31.237.242;Port=5432;Database=aiqi_dust_s7;Username=aqhj_admin;Password=aqhj#dust_s7",
-    "DefaultConnection": "Host=47.102.41.181;Port=5432;Database=environment;Username=postgres;Password=123456"
+    "Port": 40003
   },
   "Mqtt": {
     "Server": "47.117.118.169",
@@ -14,6 +10,14 @@
     "Password": "Monitor.2024#Pole",
     "ClientId": "your_device_serial_number"
   },
+  //"Mqtt": {
+  //  "Server": "127.0.0.1",
+  //  "Port": 18883,
+  //  "Topic": "monitor/pole/",
+  //  "Username": "monitor_pole",
+  //  "Password": "Monitor.2024#Pole",
+  //  "ClientId": "your_device_serial_number"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
