--- a/src/EMqttRelay/log4net.config
+++ b/src/EMqttRelay/log4net.config
@@ -4,6 +4,8 @@
     <level value="ALL" />
     <appender-ref ref="AllAppender" />
     <appender-ref ref="ConsoleAppender" />
+    <appender-ref ref="DebugAppender" />
+    
   </root>
   <appender name="AllAppender" type="log4net.Appender.RollingFileAppender">
     <param name="File" value=".\log\" />
@@ -17,70 +19,20 @@
     <layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%d [%t] %-5p %l - %m%n" />
     </layout>
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <levelMin value="ERROR" />
+      <levelMax value="FATAL" />
+    </filter>
   </appender>
   <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
   	 <layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
     </layout>
   </appender>
-  <!--<appender name="WCSAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value=".\log\" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaxSizeRollBackups" value="1000" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="datePattern" value="''yyyyMMdd-HH'_WCS.log'" />
-    <param name="RollingStyle" value="Composite" />
-    <param name="Encoding" value="utf-8" />
+
+  <appender name="DebugAppender" type="log4net.Appender.DebugAppender, log4net" >
     <layout type="log4net.Layout.PatternLayout">
-      <param name="ConversionPattern" value="%d [%t] %-5p %l - %m%n" />
+      <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
     </layout>
   </appender>
-  <appender name="ServerPublishAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value=".\log\" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaxSizeRollBackups" value="1000" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="datePattern" value="''yyyyMMdd-HH'_Publish.log'" />
-    <param name="RollingStyle" value="Composite" />
-    <param name="Encoding" value="utf-8" />
-    <layout type="log4net.Layout.PatternLayout">
-      <param name="ConversionPattern" value="%d [%t] %-5p %l - %m%n" />
-    </layout>
-  </appender>
-  <appender name="MergeAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value=".\log\" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaxSizeRollBackups" value="1000" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="datePattern" value="''yyyyMMdd-HH'_Merge.log'" />
-    <param name="RollingStyle" value="Composite" />
-    <param name="Encoding" value="utf-8" />
-    <layout type="log4net.Layout.PatternLayout">
-      <param name="ConversionPattern" value="%d [%t] %-5p %l - %m%n" />
-    </layout>
-  </appender>
-  <appender name="ChoosenAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value=".\log\" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaxSizeRollBackups" value="1000" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="datePattern" value="''yyyyMMdd-HH'_Choosen.log'" />
-    <param name="RollingStyle" value="Composite" />
-    <param name="Encoding" value="utf-8" />
-    <layout type="log4net.Layout.PatternLayout">
-      <param name="ConversionPattern" value="%d [%t] %-5p %l - %m%n" />
-    </layout>
-  </appender>
-  <appender name="PickAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value=".\log\" />
-    <param name="AppendToFile" value="true" />
-    <param name="MaxSizeRollBackups" value="1000" />
-    <param name="StaticLogFileName" value="false" />
-    <param name="datePattern" value="''yyyyMMdd-HH'_Pick.log'" />
-    <param name="RollingStyle" value="Composite" />
-    <param name="Encoding" value="utf-8" />
-    <layout type="log4net.Layout.PatternLayout">
-      <param name="ConversionPattern" value="%d [%t] %-5p %l - %m%n" />
-    </layout>
-  </appender>-->
 </log4net>
