--- a/src/UniteTest/UniteTest.csproj
+++ b/src/UniteTest/UniteTest.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\EHost.App\EHost.App.csproj" />
     <ProjectReference Include="..\EHost.Contract\EHost.Contract.csproj" />
+    <ProjectReference Include="..\EMqttRelay\EMqttRelay.csproj" />
   </ItemGroup>
 
   <ItemGroup>
