--- a/src/EMqttRelay/EMqttRelay.csproj
+++ b/src/EMqttRelay/EMqttRelay.csproj
@@ -19,6 +19,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="document\server\**" />
+    <EmbeddedResource Remove="document\server\**" />
+    <None Remove="document\server\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
