--- a/src/EMqttRelay/appsettings.json
+++ b/src/EMqttRelay/appsettings.json
@@ -3,7 +3,7 @@
     "Port": 40003
   },
   "Mqtt": {
-    "Server": "47.117.118.169",
+    "Server": "47.117.118.169", //"61.171.88.34",
     "Port": 18883,
     "Topic": "monitor/pole/",
     "Username": "monitor_pole",
@@ -11,8 +11,8 @@
     "ClientId": "your_device_serial_number"
   },
   //"Mqtt": {
-  //  "Server": "127.0.0.1",
-  //  "Port": 18883,
+  //  "Server": "z8a0a8dd.ala.cn-hangzhou.emqxsl.cn",
+  //  "Port": 8883,
   //  "Topic": "monitor/pole/",
   //  "Username": "monitor_pole",
   //  "Password": "Monitor.2024#Pole",
