--- a/src/EMqttRelay/log4net.config
+++ b/src/EMqttRelay/log4net.config
@@ -19,10 +19,10 @@
     <layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%d [%t] %-5p %l - %m%n" />
     </layout>
-    <filter type="log4net.Filter.LevelRangeFilter">
+    <!--<filter type="log4net.Filter.LevelRangeFilter">
       <levelMin value="ERROR" />
       <levelMax value="FATAL" />
-    </filter>
+    </filter>-->
   </appender>
   <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
   	 <layout type="log4net.Layout.PatternLayout">
