--- a/src/SplitServer/backend/ESys.App/appsettings.Development.json
+++ b/src/SplitServer/backend/ESys.App/appsettings.Development.json
@@ -61,7 +61,7 @@
   },
   "SyncEquipment": {
     "TenantMicroViewDirectories": {
-      "Emis": "D:\\tmp\\Emis"
+      //"Emis": "D:\\tmp\\Emis"
     }
   },
   "JWTSettings": {
@@ -76,4 +76,5 @@
     "ClockSkew": 5, // 过期时间容错值，long 类型，单位秒，默认 5秒
     "Algorithm": "HS256" // 加密算法，string 类型，默认 SecurityAlgorithms.HmacSha256
   }
+
 }
