--- a/src/SplitServer/backend/ESys.App/appsettings.Production.json
+++ b/src/SplitServer/backend/ESys.App/appsettings.Production.json
@@ -80,11 +80,11 @@
         "Url": "https://*:9444"
       }
     },
-    "Certificates": {
-      "Default": {
-        "Path": "E:\\Web\\Cert\\emis.metaura.cn_iis\\emis.metaura.cn.pfx",
-        "Password": "35ltlw6jvx"
-      }
-    }
+    //"Certificates": {
+    //  "Default": {
+    //    "Path": "E:\\Web\\Cert\\emis.metaura.cn_iis\\emis.metaura.cn.pfx",
+    //    "Password": "35ltlw6jvx"
+    //  }
+    //}
   }
 }
