web 前后端内容

--- a/src/SplitServer/backend/ESys.App/appsettings.MigrationPostgreSQL.json
+++ b/src/SplitServer/backend/ESys.App/appsettings.MigrationPostgreSQL.json
@@ -12,8 +12,7 @@
   },
   "Db": {
     "connectionstr": "Host=127.0.0.1;Port=5432;Database=etest;Username=postgres;Password=123456",
-    //"connectionStr": "Server=localhost;Database=modus;User Id=root;Password=sr160608;",
-    //"connectionStr": "Data Source=sh-cdb-a6z48my4.sql.tencentcdb.com;Database=emis_dev;User ID=root;Password=Metaura@2022;pooling=true;port=63703;sslmode=none;CharSet=utf8;",
+    //"connectionstr": "Host=118.25.103.173;Port=5432;Database=ESysAiqiMaster;Username=postgres;Password=LD@na#1224!psg",
     "type": "PostgreSQL"
   }
 }
