修改数据库版本内容 维护token 刷新机制

--- a/src/SplitServer/backend/ESys.App/appsettings.Development.json
+++ b/src/SplitServer/backend/ESys.App/appsettings.Development.json
@@ -29,6 +29,8 @@
     //"connectionstr": "server=127.0.0.1;database=etest;user id=root;password=123456;",
     //"type": "MySQL",
     //"connectionstr": "Host=106.14.187.149;Port=57702;Database=ESysMaster;Username=postgres;Password=j5HRam$Cz#Df@qja",
+    //"connectionstr": "Host=47.102.41.181;Port=5432;Database=ESysMaster;Username=postgres;Password=123456",
+
     "connectionstr": "Host=127.0.0.1;Port=5432;Database=etest;Username=postgres;Password=123456",
     //艾启
     //"connectionstr": "Host=118.25.103.173;Port=5432;Database=ESysAiqiMaster;Username=postgres;Password=LD@na#1224!psg",
@@ -77,8 +79,8 @@
     "ValidateAudience": true, // 是否验证签收方，bool 类型，默认true
     "ValidAudience": "签收方", // 签收方，string 类型
     "ValidateLifetime": true, // 是否验证过期时间，bool 类型，默认true，建议true
-    "ExpiredTime": 3000, // 过期时间，long 类型，单位分钟，默认20分钟
-    "ClockSkew": 5, // 过期时间容错值，long 类型，单位秒，默认 5秒
+    "ExpiredTime": 1, // 过期时间，long 类型，单位分钟，默认20分钟
+    "ClockSkew": 120, // 过期时间容错值，long 类型，单位秒，默认 5秒
     "Algorithm": "HS256" // 加密算法，string 类型，默认 SecurityAlgorithms.HmacSha256
   },
   "Kestrel": {
