--- a/src/SplitServer/backend/ESys.App/appsettings.Production.json
+++ b/src/SplitServer/backend/ESys.App/appsettings.Production.json
@@ -2,12 +2,19 @@
   "AppSettings": {
     "VirtualPath": "./",
     "ExternalAssemblies": [
+      "ESys.Approval.dll",
+      "ESys.EquipmentSync.dll",
+      "ESys.Notification.dll",
+      "ESys.Schedule.dll",
       "ESys.Management.dll",
+      "ESys.Reports.dll",
       "ESys.System.dll",
+      "ESys.Importer.dll",
       "ESys.Db.MySQL.dll",
-      "ESys.Db.SqlServer.dll",
       "ESys.Db.PostgreSQL.dll",
-      "ESys.Notification.dll"
+      "ESys.Db.SqlServer.dll",
+      "ESys.Workflow.dll",
+      "ESys.ImportExport.dll"
     ]
   },
   "Logging": {
