后台 服务 1. Db 结构 2. 单元测试 3. App Tcp服务  - 设备连接和数据上传、包括下发指令  - tcp 工具中转下发指令

--- a/src/EHost/EHost.App/appsettings.json
+++ b/src/EHost/EHost.App/appsettings.json
@@ -1,10 +1,19 @@
 {
   "TcpServer": {
-    "Port": 12345
+    "GetEnvironmentPort": 7777, // 设备传输端口，用于存储对外环境数据
+    "InternalPort": 7778, //内部协议端口，用于连接实际设备以及下发指令
+    "CommandPort": 7779 // 指令连接端口，用于调试助手连接下发命令
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Host=118.31.237.242;Port=5432;Database=aiqi_dust_s7;Username=aqhj_admin;Password=aqhj#dust_s7",
-    "DefaultConnection": "Host=47.102.41.181;Port=5432;Database=environment;Username=postgres;Password=123456"
+    //"DefaultConnection": "Host=47.102.41.181;Port=5432;Database=ESysData;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=eSlave;Username=postgres;Password=123456"
+  },
+  "JwtSettings": {
+    "SecretKey": "ESysService_(*)&KRU^#KFJSJFSt", // 请使用一个足够长且复杂的密钥
+    "Issuer": "YourIssuer", // 设置令牌的发行者
+    "Audience": "YourAudience", // 设置令牌的接收者
+    "Expires": 60 // 令牌的过期时间（分钟）
   },
   "Logging": {
     "LogLevel": {
