分割程序 1. 更新数据库版本 添加MN 和通知处理机制

--- a/src/SplitServer/backend/ESys.App/appsettings.MigrationPostgreSQL.json
+++ b/src/SplitServer/backend/ESys.App/appsettings.MigrationPostgreSQL.json
@@ -11,7 +11,7 @@
     ]
   },
   "Db": {
-    "connectionstr": "Host=127.0.0.1;Port=5432;Database=etest;Username=postgres;Password=123456",
+    "connectionstr": "Host=127.0.0.1;Port=5432;Database=eMaster;Username=postgres;Password=123456",
     //"connectionstr": "Host=118.25.103.173;Port=5432;Database=ESysAiqiMaster;Username=postgres;Password=LD@na#1224!psg",
     "type": "PostgreSQL"
   }
