更新 数据库 添加MN 设备id 的管理

--- a/src/SplitServer/backend/ESys.App/appsettings.Development.json
+++ b/src/SplitServer/backend/ESys.App/appsettings.Development.json
@@ -31,11 +31,12 @@
     //"connectionstr": "Host=106.14.187.149;Port=57702;Database=ESysMaster;Username=postgres;Password=j5HRam$Cz#Df@qja",
     //"connectionstr": "Host=47.102.41.181;Port=5432;Database=ESysMaster;Username=postgres;Password=123456",
 
-    "connectionstr": "Host=127.0.0.1;Port=5432;Database=eMaster;Username=postgres;Password=123456",
+    //"connectionstr": "Host=127.0.0.1;Port=5432;Database=eMaster;Username=postgres;Password=123456",
     //艾启
     //"connectionstr": "Host=118.25.103.173;Port=5432;Database=ESysAiqiMaster;Username=postgres;Password=LD@na#1224!psg",
     //龙涤
     //"connectionstr": "Host=122.51.188.91;Port=57702;Database=ESysMaster;Username=postgres;Password=mqpxYOcKd36x^&bZ$!XBjRBCMoSE3I",
+    "connectionstr": "Host=118.25.103.173;Port=5432;Database=ESysTestMaster;Username=postgres;Password=LD@na#1224!psg",
     "type": "PostgreSQL"
   },
   //"Redis": {
