--- a/src/SplitServer/backend/ESys.App/appsettings.Production.json
+++ b/src/SplitServer/backend/ESys.App/appsettings.Production.json
@@ -25,7 +25,7 @@
     }
   },
   "Db": {
-    "connectionstr": "Host=127.0.0.1;Port=5432;Database=etest;Username=postgres;Password=123456",
+    "connectionstr": "Host=127.0.0.1;Port=5432;Database=eMaster;Username=postgres;Password=123456",
     "type": "PostgreSQL"
   },
   "Redis": {
